tests/rosetta/out/Rust/almost-prime.error
rustc: exit status 1
error: `<` is interpreted as a start of generic arguments for `i32`, not a comparison
  --> /tmp/almost-prime.rs:21:30
   |
21 |         while r.len() as i32 < count {
   |                              ^ ------- interpreted as generic arguments
   |                              |
   |                              not interpreted as comparison
   |
help: try comparing the cast value
   |
21 |         while (r.len() as i32) < count {
   |               +              +

error[E0277]: can't compare `{integer}` with `&mut i32`
 --> /tmp/almost-prime.rs:6:17
  |
6 |         while i <= n {
  |                 ^^ no implementation for `{integer} < &mut i32` and `{integer} > &mut i32`
  |
  = help: the trait `PartialOrd<&mut i32>` is not implemented for `{integer}`
help: consider dereferencing here
  |
6 |         while i <= *n {
  |                    +

error[E0369]: cannot calculate the remainder of `&mut i32` divided by `{integer}`
 --> /tmp/almost-prime.rs:7:21
  |
7 |             while n % i == 0 {
  |                   - ^ - {integer}
  |                   |
  |                   &mut i32
  |
help: `%` can be used on `i32` if you dereference the left-hand side
  |
7 |             while *n % i == 0 {
  |                   +

error[E0368]: binary assignment operation `/=` cannot be applied to type `&mut i32`
  --> /tmp/almost-prime.rs:12:17
   |
12 |                 n /= i;
   |                 -^^^^^
   |                 |
   |                 cannot use `/=` on type `&mut i32`
   |
help: `/=` can be used on `i32` if you dereference the left-hand side
   |
12 |                 *n /= i;
   |                 +

error[E0599]: `Vec<i32>` doesn't implement `std::fmt::Display`
  --> /tmp/almost-prime.rs:32:111
   |
32 | ... k.to_string(), " "), gen(k, 10).to_string()))].into_iter().filter(|s| !s.is_empty()).collect::<Vec<_>>().join(" ") );
   |                                     ^^^^^^^^^ `Vec<i32>` cannot be formatted with the default formatter
   |
   = note: the following trait bounds were not satisfied:
           `Vec<i32>: std::fmt::Display`
           which is required by `Vec<i32>: ToString`
           `[i32]: std::fmt::Display`
           which is required by `[i32]: ToString`
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0277, E0368, E0369, E0599.
For more information about an error, try `rustc --explain E0277`.
